--- a/Eugene.html
+++ b/Eugene.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-
 <head>
 
     <link rel="stylesheet" href="styles/styles.css">
@@ -10,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eugene Shapovalov</title>
+    <link rel="icon" href="images/me.jpg">
 
 </head>
 
@@ -17,42 +15,45 @@
 
     <header class="header">
         <nav class="nav">
-            <h1 class="visually-hidden"><a href="EugeneShapovalov.html">Eugene Shapovalov</a></h1>
-            <div class="logo">
-                <a href="EugeneShapovalov.html">
-                    <img src="images/me.jpg" alt="My_logo" title="logo" width="50" height="50">
-                </a>
+            <div class="nav-contents">
+                <div class="logo">
+                    <a href="EugeneShapovalov.html">
+                        <img src="images/me.jpg" alt="My_logo" title="logo" width="50" height="50" class="logo-image">
+                    </a>
+                </div>
+                <div class="title">
+                    <a href="EugeneShapovalov.html">Eugene Shapovalov</a>
+                </div>
+                <div class="menu">
+                    <a href="about.html">About</a>
+                    <a href="fun-facts.html">Fun Facts</a>
+                    <a href="video.html">Video</a>
+                    <a href="learned.html">Learned</a>
+                    <a href="connect.html">Connect</a>
+                </div>
             </div>
-            <ul class="menu">
-                <li><a href="EugeneShapovalov.html">About</a></li>
-                <li><a href="EugeneShapovalov.html#fun-facts">Fun Facts</a></li>
-                <li><a href="EugeneShapovalov.html#video">Video</a></li>
-                <li><a href="EugeneShapovalov.html#learned">Learned</a></li>
-                <li><a href="EugeneShapovalov.html#connect">Connect</a></li>
-            </ul>
         </nav>
-        
     </header>
 
     
 
 
+    <div class="about-me"></div>
+        <img src="images/me.jpg" alt="" width="400px" height="500px" class="about-photo">
+        <P> <i> Hi my name is Eugene Shapovalov, I was born in Kiev capital of Ukraine.
+                I moved to USA in 2015, where I live and enjoy life with my wife and two children.
+                I used to work as a Junior IT Engineer.
+                I was lucky to be selected for the <u>i.c.stars program <a href="https://www.icstars.org/">"Try it
+                        now"</a></u>, where I'm working on creating
+                the best version of myself, gaining lots of new knowledge and experience.</i>
+                </P>
 
-    <img src="images/me.jpg" alt="" width="400px" height="500px">
-    <P> <i> Hi my name is Eugene Shapovalov, I was born in Kiev capital of Ukraine.
-            I moved to USA in 2015, where I live and enjoy life with my wife and two children.
-            I used to work as a Junior IT Engineer.
-            I was lucky to be selected for the <u>i.c.stars program <a href="https://www.icstars.org/">"Try it
-                    now"</a></u>, where I'm working on creating
-            the best version of myself, gaining lots of new knowledge and experience.</i>
-    </P>
-
-    <ol>
-        <li>I like animals, going to a zoo, feeding animals in nature</li>
-        <li>I like to play with kids</li>
-        <li>Cook better than my mother-in-law</li>
-    </ol>
-
+        <ol>
+            <li>I like animals, going to a zoo, feeding animals in nature</li>
+            <li>I like to play with kids</li>
+            <li>Cook better than my mother-in-law</li>
+        </ol>
+    </div>
 
     <video controls loop autoplay src="Beingmyself.mp4" width="200" height="200"></video>
 
@@ -70,5 +71,4 @@
 
 
 </body>
-
 </html>
