--- a/youpage.html
+++ b/youpage.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Eugene Shapovalov</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eugene Shapovalov</title>
-</head>
+  <body>
+    <h1>Header 500</h1>
 
-<body>
-  <h1>
-    Header 500
-  </h1>
+    <h2>Header 2</h2>
 
-  <h2>
-    Header 2
-  </h2>
+    <h3>Header 3</h3>
 
-  <h3>
-    Header 3
-  </h3>
-
-
-  <p style="color:red"> this is a page about making a page<P>
-    
-    <b>Cycle 52</b> this is the begining of <i>YouPage project</i>
-  </P>
-  <ol>
-    <li>List Item 1</li>
-    <li>List Item 2</li>
-    <li>List Item 3</li>
-  </ol>
-  <!--This is the begining of my comment, please save this code and do not delete
+    <p style="color: red">this is a page about making a page</p>
+    <p><b>Cycle 52</b> this is the begining of <i>YouPage project</i></p>
+    <ol>
+      <li>List Item 1</li>
+      <li>List Item 2</li>
+      <li>List Item 3</li>
+    </ol>
+    <!--This is the begining of my comment, please save this code and do not delete
 <ul>
   <li>List Item 1</li>
   <li>List Item 2</li>
@@ -39,14 +29,10 @@
 </ul>
 -->
 
-  <P>
-    my page continues here
-  </P>
+    <p>my page continues here</p>
 
-  <p>Here is an image:</p>
+    <p>Here is an image:</p>
 
-  <img src="images/Cycle52.png" alt="" width="1000px">
-
-</body>
-
+    <img src="images/Cycle52.png" alt="" width="1000px" />
+  </body>
 </html>
