--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <nav class="nav">
         <div class="nav-contents">
           <div class="logo">
-            <a href="EugeneShapovalov.html">
+            <a href="Eugene.html">
               <img
                 src="images/me.jpg"
                 alt="My_logo"
@@ -45,14 +45,14 @@
         alt=""
         width="400px"
         height="500px"
-        class="about-photo"
+        class="images"
       />
       <p>
         <i>
-          Hi my name is Eugene Shapovalov, I was born in Kiev capital of
-          Ukraine. I moved to USA in 2015, where I live and enjoy life with my
-          wife and two children. I used to work as a Junior IT Engineer. I was
-          lucky to be selected for the
+          Hi, my name is Eugene Shapovalov, I was born in Kiev, the capital of
+          Ukraine. I moved to the US in 2015, where I live and enjoy life with
+          my wife and two children. I used to work as a Junior IT Engineer. I
+          was lucky to be selected for the
           <u
             >i.c.stars program
             <a href="https://www.icstars.org/">"Try it now"</a></u
