--- a/learned.html
+++ b/learned.html
@@ -25,7 +25,7 @@
             </a>
           </div>
           <div class="title">
-            <a href="EugeneShapovalov.html">Eugene Shapovalov</a>
+            <a href="Eugene.html">Eugene Shapovalov</a>
           </div>
           <div class="menu">
             <a href="about.html">About</a>
@@ -37,5 +37,9 @@
         </div>
       </nav>
     </header>
+    <p>This video shows me that I'm on the right <b>Vibe!</b></p>
+    <p style="color: rgb(136, 0, 255)">
+      I'm not trying to be someone for someone.
+    </p>
   </body>
 </html>
