--- a/video.html
+++ b/video.html
@@ -25,7 +25,7 @@
             </a>
           </div>
           <div class="title">
-            <a href="EugeneShapovalov.html">Eugene Shapovalov</a>
+            <a href="Eugene.html">Eugene Shapovalov</a>
           </div>
           <div class="menu">
             <a href="about.html">About</a>
@@ -37,5 +37,13 @@
         </div>
       </nav>
     </header>
+    <video
+      controls
+      loop
+      autoplay
+      src="Beingmyself.mp4"
+      width="200"
+      height="200"
+    ></video>
   </body>
 </html>
