--- a/Eugene.html
+++ b/Eugene.html
@@ -1,74 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <link rel="stylesheet" href="styles/styles.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eugene Shapovalov</title>
-    <link rel="icon" href="images/me.jpg">
+    <link rel="icon" href="images/me.jpg" />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <header class="header">
-        <nav class="nav">
-            <div class="nav-contents">
-                <div class="logo">
-                    <a href="EugeneShapovalov.html">
-                        <img src="images/me.jpg" alt="My_logo" title="logo" width="50" height="50" class="logo-image">
-                    </a>
-                </div>
-                <div class="title">
-                    <a href="EugeneShapovalov.html">Eugene Shapovalov</a>
-                </div>
-                <div class="menu">
-                    <a href="about.html">About</a>
-                    <a href="fun-facts.html">Fun Facts</a>
-                    <a href="video.html">Video</a>
-                    <a href="learned.html">Learned</a>
-                    <a href="connect.html">Connect</a>
-                </div>
-            </div>
-        </nav>
+      <nav class="nav">
+        <div class="nav-contents">
+          <div class="logo">
+            <a href="Eugene.html">
+              <img
+                src="images/me.jpg"
+                alt="My_logo"
+                title="logo"
+                width="50"
+                height="50"
+                class="logo-image"
+              />
+            </a>
+          </div>
+          <div class="title">
+            <a href="Eugene.html">Eugene Shapovalov</a>
+          </div>
+          <div class="menu">
+            <a href="about.html">About</a>
+            <a href="fun-facts.html">Fun Facts</a>
+            <a href="video.html">Video</a>
+            <a href="learned.html">Learned</a>
+            <a href="connect.html">Connect</a>
+          </div>
+        </div>
+      </nav>
     </header>
 
-    
-
-
-    <div class="about-me"></div>
-        <img src="images/me.jpg" alt="" width="400px" height="500px" class="about-photo">
-        <P> <i> Hi my name is Eugene Shapovalov, I was born in Kiev capital of Ukraine.
-                I moved to USA in 2015, where I live and enjoy life with my wife and two children.
-                I used to work as a Junior IT Engineer.
-                I was lucky to be selected for the <u>i.c.stars program <a href="https://www.icstars.org/">"Try it
-                        now"</a></u>, where I'm working on creating
-                the best version of myself, gaining lots of new knowledge and experience.</i>
-                </P>
-
-        <ol>
-            <li>I like animals, going to a zoo, feeding animals in nature</li>
-            <li>I like to play with kids</li>
-            <li>Cook better than my mother-in-law</li>
-        </ol>
-    </div>
-
-    <video controls loop autoplay src="Beingmyself.mp4" width="200" height="200"></video>
-
-    <p>This video shows me that I'm on the right <b>Vibe!</b></p>
-    <P style="color:rgb(136, 0, 255)"> I'm not trying to be someone for someone. </P>
-    <ul>
-        <li>Being as a team</li>
-        <li>Help people that surround you and don't be afraid to ask for help when you need it</li>
-        <li>Be a more organized person and self-motivated</li>
-    </ul>
-
-
-
-
-
-
-</body>
+    <img
+      src="images/me.jpg"
+      alt=""
+      width="400px"
+      height="500px"
+      class="images"
+    />
+    <img
+      src="images/soccer.gif"
+      alt=""
+      width="600px"
+      height="500px"
+      class="images"
+    />
+  </body>
 </html>
