--- a/connect.html
+++ b/connect.html
@@ -25,7 +25,7 @@
             </a>
           </div>
           <div class="title">
-            <a href="EugeneShapovalov.html">Eugene Shapovalov</a>
+            <a href="Eugene.html">Eugene Shapovalov</a>
           </div>
           <div class="menu">
             <a href="about.html">About</a>
