--- a/fun-facts.html
+++ b/fun-facts.html
@@ -25,7 +25,7 @@
             </a>
           </div>
           <div class="title">
-            <a href="EugeneShapovalov.html">Eugene Shapovalov</a>
+            <a href="Eugene.html">Eugene Shapovalov</a>
           </div>
           <div class="menu">
             <a href="about.html">About</a>
@@ -37,5 +37,10 @@
         </div>
       </nav>
     </header>
+    <ol class="fun-facts">
+      <li>I like animals, going to a zoo, feeding animals in nature</li>
+      <li>I like to play with kids</li>
+      <li>I cook better than my mother-in-law</li>
+    </ol>
   </body>
 </html>
