--- a/fun-facts.html
+++ b/fun-facts.html
@@ -37,9 +37,10 @@
         </div>
       </nav>
     </header>
+    <img src="images/dog.JPG" class="mydog">
     <ol class="fun-facts">
-      <li>I like animals, going to a zoo, feeding animals in nature</li>
-      <li>I like to play with kids</li>
+      <li>My dog is from Ukraine and became an American citizen before me</li>
+      <li>I played soccer professionally as a center back</li>
       <li>I cook better than my mother-in-law</li>
     </ol>
   </body>
