--- a/learned.html
+++ b/learned.html
@@ -37,9 +37,14 @@
         </div>
       </nav>
     </header>
-    <p>This video shows me that I'm on the right <b>Vibe!</b></p>
-    <p style="color: rgb(136, 0, 255)">
-      I'm not trying to be someone for someone.
+    <img src="images\Cloud.jpg" class="cloudImage" alt="cloud image">
+    <p>
+      Since I started icstars, I got a basic understanding of HTML, CSS,
+      JavaScript, SQL and Angular. 
+      <br>
+      At this time, my primary goal is to acquire
+      the knowledge necessary to get my first job as a Cloud Engineer/DevOps.
     </p>
+    
   </body>
 </html>
