--- a/video.html
+++ b/video.html
@@ -45,5 +45,9 @@
       width="200"
       height="200"
     ></video>
+    <p>This video shows me that I'm on the right <b>Vibe!</b></p>
+    <p style="color: rgb(136, 0, 255)">
+      I'm not trying to be someone for someone.
+    </p>
   </body>
 </html>
