--- a/connect.html
+++ b/connect.html
@@ -37,5 +37,10 @@
         </div>
       </nav>
     </header>
+    <a
+      href="https://www.linkedin.com/in/eugene-shapovalov-401781264/"
+      target="_blank"
+      >Linkedin</a
+    >
   </body>
 </html>
